Added sinigang.html and sinigang image and adobo image

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/sopas.html">Sopas Recipe</a>
+    <a href="./recipes/sinigang.html">Sinigang Na Baboy</a>
   </body>
 </html>
