- Added adobo recipe - modified index recipe into list - added home button to go back to index

--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1>Sinigang Na Baboy</h1>
+    <a href="../index.html">Home</a>
+    <br />
     <img src="../images/sinigang.jpg" alt="Cooked Sinigang Na Baboy" />
     <h3>Description</h3>
     <h4>Ingredients</h4>
