--- a/recipes/sopas.html
+++ b/recipes/sopas.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1>Sopas Recipe</h1>
+    <a href="../index.html">Home</a>
+    <br />
     <img src="../images/sopas_img.jpg" alt="Freshly Made Sopas" />
     <h3>Description</h3>
     <h4>Ingredients</h4>
