--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/sopas.html">Sopas Recipe</a>
-    <a href="./recipes/sinigang.html">Sinigang Na Baboy</a>
+    <ul>
+      <li><a href="./recipes/sopas.html">Sopas Recipe</a></li>
+      <li><a href="./recipes/sinigang.html">Sinigang Na Baboy</a></li>
+      <li><a href="./recipes/adobo.html">Chicken Adobo</a></li>
+    </ul>
   </body>
 </html>
